--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -1,4 +1,4 @@
-nav{
+navbar{
     display: grid;
     width: 100%;
     height: 100px;
@@ -9,16 +9,16 @@ nav{
 }
 
 
-nav .logo{
+navbar .logo{
     grid-area: logo;
     list-style-type: none;
     padding: 20px;
 }
-nav ul{
+navbar ul{
     grid-area: navbar;
 
 }
-nav ul li{
+navbar ul li{
     display: inline-block;
     margin-right: 1rem;
 }
