--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -3,23 +3,46 @@ navbar{
     width: 100%;
     height: 100px;
 
-    background-color: coral;
+    background-color: darkslategrey;
     grid-template-areas: 'logo navbar';
-    grid-template-columns: 75% 25%;
+    grid-template-columns: 50% 50%;
+
 }
 
 
 navbar .logo{
     grid-area: logo;
     list-style-type: none;
-    padding: 20px;
+}
+
+navbar img{
+    margin-top: 7px;
+    margin-left: 5rem;
 }
 navbar ul{
     grid-area: navbar;
-
+    display: flex;
+    justify-content: flex-end;
 }
 navbar ul li{
     display: inline-block;
-    margin-right: 1rem;
+    margin-right: 5rem;
+    margin-top: 0.9rem;
+
+}
+
+navbar ul a{
+    color: white;
+    text-decoration: none;
+    border: 1px solid white;
+    border-radius: 3px;
+    padding: 10px 15px;
+    font-size: 15px;
+    display: block;
+}
+
+navbar ul a:hover{
+    transition: 1s;
+    transform: scale(1.09);
 }
 
