--- a/src/components/menu/slider/slider.css
+++ b/src/components/menu/slider/slider.css
@@ -1,7 +1,6 @@
 .slider{
-
     max-height: 200px;
     max-width: 400px;
     display: block;
-    margin: 100px 0 100px 0;
+    margin: 100px auto;
 }
