--- a/src/components/ basket/basket.css
+++ b/src/components/ basket/basket.css
@@ -1,58 +1,48 @@
-form {
-    max-width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.formSection{
+    background: darkslategrey;
+    max-width: 45rem;
+    border-radius: .5rem;
+    padding: 1.5rem;
+    margin: 2rem auto;
 }
-form .containInput {
-    margin-bottom: 20px;
-    max-width: 600px;
-}
-form .containInput input{
-    padding: 0;
-    min-width: 400px;
-    min-height: 50px;
-    box-shadow: 2px 2px darkslategrey;
-    border: none;
-}
-form .containInput label{
-    display: inline-block;
-    text-align: right;
-    width: 150px;
-    height: 10px;
-    font-size: 30px;
-    margin-right: 30px;
 
+.formSection .containInput{
+    margin: 10px auto;
+    color: white;
+    text-align: center;
 }
-.containerEmpty{
-    position: relative;
-    width: 400px;
-    height: 150px;
-    margin: 0 auto;
-}
-.emptyBasket{
-    background: red;
-    opacity: 0.5;
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
 
-}
-.emptyText{
-    color: black;
-    position: absolute;
-    left: 25%;
-    top: 25%;
-    width: 100%;
-    height: 100%;
-    font-size: 30px;
+.formSection .containInput input {
+    margin-left: 1rem;
+    width: 12rem;
 
 }
 
+.formSection .containInput label{
+    font-size: 1.2rem;
+}
 
-form button{
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.buttonForm button{
     display: block;
     margin: 0 auto;
     padding: 10px 20px;
@@ -63,3 +53,4 @@ form button{
     color: white;
     font-size: 15px;
 }
+
